Filter out bug fixes and internal-change commits, keep umbrella headers
Drops 131 more commits from the keep set (777 -> 646) by skipping
low-signal work whose only inclusion signal is big-umbrella amplification:
- Bug-fix commits (JIRA issuetype = Bug) without a user_facing flag
- Test-or-doc commits (already detected)
- Internal-change commits whose title begins with Refactor / Cleanup /
  Simplify / Reduce / Rename / Remove unused / Extract / Consolidate /
  Migrate / Format / Polish / Replace / Move / Deduplicate / Tidy

Umbrellas that lose all their children to this filter but had >=3
children in range still render as a single header-only bullet in
the umbrella's home section, preserving the work-area context.

SPIP umbrellas keep all children regardless.

Co-authored-by: Isaac